# FileSystemWatcher

./: README.md  pyproject.toml
FileSystemWatcher/: __init__.py  main.py  polling.py
FileSystemWatcher/model/: directory.py
filesystemwatcher/: __init__.py  daemon_control.py  main.py  polling.py
